Improvements from code review with Lee: + Tabs are considered overflowed if they are at least 25% obscured + Allow closing tabs from the overflow menu + Better behaviour in vertical mode + Styling improvements and fixes

--- a/desktop/cmp/tab/Tabs.scss
+++ b/desktop/cmp/tab/Tabs.scss
@@ -23,6 +23,7 @@
 .xh-tab-switcher {
   display: flex;
 
+  // Allow scrolling
   &__scroll {
     overflow-x: auto;
 
@@ -33,7 +34,6 @@
 
   &--top {
     padding-left: var(--xh-pad-px);
-    padding-bottom: var(--xh-pad-half-px);
   }
 
   &--bottom {
@@ -41,16 +41,55 @@
     padding-top: var(--xh-pad-half-px);
 
     // Flip the indicator to be on top of the tab label
-    .bp3-tab-list > .bp3-tab-indicator-wrapper {
-      top: -85%;
+    .bp3-tab[aria-selected=true] {
+      box-shadow: inset 0 3px 0 currentColor;
     }
   }
 
-  .bp3-tab-list .xh-button {
-    padding: 0 !important;
-    margin-left: 3px;
-    min-height: 15px;
-    min-width: 15px;
-    border-radius: 100% !important;
+  &--left,
+  &--right {
+    flex-direction: column;
+
+    // Make overflow button full width
+    .bp3-popover-wrapper .bp3-popover-target {
+      display: block;
+
+      .xh-button {
+        width: 100%;
+      }
+    }
+  }
+
+  // Right align close button within tabs
+  .bp3-tab-list .bp3-tab {
+    display: flex;
+
+    & > svg:first-child {
+      margin-top: 0.45em;
+    }
+
+    & > span {
+      flex: 1;
+    }
+
+    // Close button styling
+    .xh-button {
+      align-self: center;
+      padding: 0 !important;
+      margin-left: 3px;
+      min-height: 15px;
+      min-width: 15px;
+      border-radius: 100% !important;
+    }
+  }
+
+  &__overflow-menu {
+    min-width: unset;
+
+    .xh-button {
+      padding: 0 !important;
+      min-width: 20px !important;
+      min-height: 20px !important;
+    }
   }
 }
