--- a/kit/blueprint/styles.scss
+++ b/kit/blueprint/styles.scss
@@ -80,6 +80,11 @@
   margin-right: var(--xh-pad-half-px);
 }
 
+// Vertical tab lists fill their width
+.bp3-tabs.bp3-vertical .bp3-tab-list {
+  flex: 1;
+}
+
 //------------------------
 // Dialogs, Popovers, Masking
 //------------------------
